[NTP] Use only even pixel sizes for the custom link icons

Do not use odd pixel sizes for NTP icons. The combination of an odd
fallback monogram width and an even total icon width (and vice versa)
causes an off by 1 effect when centering. Hence the fallback monogram
will be slightly up and to the left instead of centered.

Before: https://screenshot.googleplex.com/AMXrPCaQ9B2.png
After: https://screenshot.googleplex.com/VG0rZbnRnH3.png

Bug: 918481
Change-Id: I6537f8f585fcc136eed6e93a3c5bc4e7279a51a4
Reviewed-on: https://chromium-review.googlesource.com/c/1400261
Commit-Queue: Kristi Park <kristipark@chromium.org>
Reviewed-by: Ramya Nagarajan <ramyan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621870}
Former-commit-id: a71135f6cdc0740fdbbff780301b40f4b8011258